[package]
name = "ora"
version = "1.0.0"
authors = ["David Tyler <davet.code@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
reqwest = { version = "0.11.2", features = ["blocking"] }
